--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/assets/ocean.png?v=2" />
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/ocean.png?v=2" />
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/ocean.png?v=2" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/ocean.png?v=2" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/ocean.png?v=2" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/emojis/ocean.png?v=2" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/emojis/ocean.png?v=2" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/assets/emojis/ocean.png?v=2" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>Carl Chua - Software Engineer</title>
